Fix heigh Navbar

--- a/src/wwwroot/css/test.css
+++ b/src/wwwroot/css/test.css
@@ -2,8 +2,20 @@
 for details on configuring this project to bundle and minify static web assets. */
 
 * {
+    /* border: 1px dashed red; */
+}
+
+html{
+    border: 0;
+    margin: 0;
+    box-sizing: border-box;
+    height: 100vh;
+}
+
+.bol{
     border: 1px dashed red;
 }
+
 
 a.navbar-brand {
     white-space: normal;
@@ -38,15 +50,11 @@ html {
     font-size: 14px;
 }
 
-@media (min-width: 768px) {
+@media (max-width: 770px) {
 
     html {
         font-size: 16px;
     }
-    
-}
-
-@media (max-width: 767px) {
 
     body {
         background-color: yellow; 
@@ -56,6 +64,12 @@ html {
         display: flex;
         flex-direction: row;
         width: 100% !important;
+    }
+    
+    #buttonAction  > button {
+
+        width: max-content;
+
     }
     
 }
@@ -89,7 +103,7 @@ html {
 #Navbar {
     background-color: #f2f2f2 !important;
     margin-bottom: 1.4rem;
-    height: 7.5rem;
+    min-height: 7.5rem;
 }
  
 body {
@@ -111,7 +125,7 @@ a.nav-link {
 
 div.bg-dark ul > li > a {
     list-style: none;
-    padding: 0.6rem 1.25rem;
+    /* padding: 0.6rem 1.25rem; */
 }
 
 div.bg-dark ul > li  > a:hover {
@@ -175,24 +189,23 @@ div#OptionsPomodoro > div.col > button:focus-within{
     font-size: 100px;
     display: block;
     text-align: center;
-    margin: 0 50px;
+    /* margin: 0 50px; */
 }
 
 #ActionsPomodoro {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    width: 75%;
+    width: 65%;
     text-align: center;
     align-self: center;
     margin: 0 auto;
 }
 
-#ActionsPomodoro > div.col > button {
-    border-radius: 3px;
+#buttonAction  > button {
+    border-radius: 3px; 
     color: white;
     font-weight: bold;
     height: 50px;
     width: 100px;
-
 }
