--- a/src/Pages/Index.cshtml
+++ b/src/Pages/Index.cshtml
@@ -2,49 +2,48 @@
 @model IndexModel
 @{
 
-} 
-  
-<div class="container"> 
-     
-    <div id="OptionsPomodoro" class="row">   
- 
-        <div class="col "> 
-         <button >Pomodoro</button> 
-        </div> 
-         
-        <div class="col">   
-            <button>Short Break</button>  
-        </div>
-  
-        <div class="col"> 
-            <button>Long Break</button> 
-        </div> 
+}
 
-    </div>   
-    
-    <div class="row mt-5 mb-5">
+<div class="container">
+
+    <div id="OptionsPomodoro" class="row mt-1 mb-4">
 
         <div class="col ">
+            <button>Pomodoro</button>
+        </div>
+
+        <div class="col">
+            <button>Short Break</button>
+        </div>
+
+        <div class="col">
+            <button>Long Break</button>
+        </div>
+
+    </div> 
+
+    <div class="row mt-2 mb-4">
+
+        <div class="col">
             <span id="counter" class="">25:00</span>
         </div>
 
-    </div>   
-     
-    <div id="ActionsPomodoro"  class="row">
-     
-        <div class="col col-ms-12" >
-            <button class="" style="background-color: #5ba422; border:1px solid #396516;" >Start</button> 
-        </div>
+    </div>    
  
-        <div class="col" > 
-            <button style="background-color: #c61013; border:1px solid #7f0a0c;" >Stop</button>
-        </div>  
+    <div id="ActionsPomodoro" class=" row col-lg-5">
 
-        <div class="col" >
-            <button style="background-color: #e9e9e9; border:1px solid #c3c3c3; color:black" >Reset</button>
+        <div id="buttonAction" class="col-md-4 ">
+            <button class="" style="background-color: #5ba422; border:1px solid #396516;">Start</button>
+        </div> 
+
+        <div id="buttonAction" class="col-md-4 "> 
+            <button style="background-color: #c61013; border:1px solid #7f0a0c;">Stop</button>
         </div>
-  
+
+        <div id="buttonAction" class="col-md-4 ">
+            <button style="background-color: #e9e9e9; border:1px solid #c3c3c3; color:black">Reset</button>
+        </div>
+
     </div>
- 
+
 </div>
-  
