--- a/src/Pages/Shared/_Layout.cshtml
+++ b/src/Pages/Shared/_Layout.cshtml
@@ -28,10 +28,11 @@
                 </div>
   
                 <div class="bg-dark col-12 col-sm-12 col-md-6 ">
+                    
                     <ul class="nav col">
-
+                        
                         <li class="nav-item col-12 col-sm-12 col-md-2 col-lg-2">
-                            <a asp-page="/" class=" nav-link"> Log </a>
+                            <a href="/counter" class=" nav-link"> Log </a>
                         </li>
 
                         <li class="nav-item col-12 col-sm-12 col-md-2">
@@ -45,7 +46,9 @@
                         <li class="nav-item col-12 col-sm-12 col-md-5 col-lg">
                             <a class="nav-link"> Tweet about us! </a>
                         </li>
+                        
                     </ul>
+                    
                 </div> 
                 
             </div>
