--- a/src/Pages/Shared/_Layout.cshtml
+++ b/src/Pages/Shared/_Layout.cshtml
@@ -5,9 +5,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>@ViewData["Title"] TimerWeb</title>
+    <title>@ViewData["Title"] TomatoTimer</title>
+    <link rel="icon" href="~/images/apple.ico"> </link>
 
-    @* <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" /> *@
     <link rel="stylesheet" href="~/lib/bootstrapv5/bootstrap.min.css">
     <link rel="stylesheet" href="~/css/test.css" />
 
